# spotify-game

./: README.md  asset-manifest.json  data.json  get_track_data.py  index.html  package-lock.json  package.json  pyproject.toml  schedule.json  spotify-playcount.dockerfile  tracks.json  veggie-tales.json  wordle.html
.github/workflows/: build_and_deploy.yaml  node.js.yml
data/: get_track_data.py  play.ipynb  tracks.json
data-play/: index.html  play.ipynb  schedule.json  track_data.csv  track_ids.json  track_ids.txt  tracks.json
public/: index.html
spotify-game/: package-lock.json  package.json
spotify-game/src/: App.js  ResultsScroll.js
src/: App.js  ResultsScroll.js  TrackCard.js  tracks.json  utilities.js
static/js/: 787.d2000452.chunk.js  787.d2000452.chunk.js.map  main.242d14c7.js  main.242d14c7.js.map  main.2d8b8e17.js  main.2d8b8e17.js.map  main.33ca1132.js  main.33ca1132.js.map  main.36f57a46.js  main.36f57a46.js.map  main.5c1500b9.js  main.5c1500b9.js.map  main.61d98445.js  main.61d98445.js.map  main.7a43b26d.js  main.7a43b26d.js.map  main.8b1cec39.js  main.8b1cec39.js.map  main.a3dad4d7.js  main.a3dad4d7.js.map  main.bbcc7f53.js  main.bbcc7f53.js.map  main.fc1fb8ba.js  main.fc1fb8ba.js.map
